GUI: load server module when start